# ds-bully-alg

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: main.rs
src/common/: bully.rs  cli_functions.rs  cli_models.rs  mod.rs  models.rs
test_data/: test.txt  test_data_1.txt  test_data_10.txt  test_data_2.txt  test_data_3.txt  test_data_4.txt  test_data_5.txt  test_data_6.txt  test_data_7.txt  test_data_8.txt  test_data_9.txt
