[package]
name = "bully_alg"
version = "0.1.0"
authors = ["fronox <serjzv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
rand = "0.7.3"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[lib]
name = "bully"
path = "src/lib.rs"